# dotfiles

./: .Xresources  .anyshrc  .bashrc  .chezmoiexternal.toml  .fehbg  .gitconfig  .gitignore  .gitmodules  .prettierrc.js  .skhdrc  .speedswapper  .tmux.conf  .vimrc  .xmobarrc  .xsessionrc  .zshenv  .zshrc  Makefile  README.md  categories.txt  dot_anyshrc  dot_bashrc  dot_gitconfig  dot_tmux.conf  dot_zshenv  dot_zshrc  init  install
.config/: compton.conf  picom.conf
.config/alacritty/: alacritty.Darwin.yml  alacritty.Linux.yml  alacritty.yml  alacritty.yml.mac
.config/albert/: albert.conf
.config/bspwm/: bspwmrc
.config/conky/: conky.conf  scripts.lua
.config/doom/: config.el  init.el  packages.el  settings.org
.config/herbstluftwm/: autostart
.config/i3/: config
.config/kitty/: kitty.conf
.config/nvim/: coc-settings.json  init.vim  keymaps.vim  plugins.vim
.config/openbox/: lxde-rc.xml
.config/polybar/: config
.config/qtile/: colors.py  config.py
.config/rofi/: config
.config/sxhkd/: sxhkdrc
.config/vifm/: vifmrc
.config/xmonad/: xmonad.hs
.doom.d/: config.el
.emacs.d/: init.el
.github/workflows/: test.yml
.hammerspoon/: init.lua
.mjolnir/: init.lua
.ssh/: authorized_keys  config
.xmonad/: xmonad.hs
devel/: repos.json  repos.txt
dot_ssh/: authorized_keys.tmpl
linux/: repos.json  repos.txt
macos/: skhdrc
scripts/: CMakeLists.txt  fs-test.cpp  fs.cpp  fs.h  link.cpp  unlink.cpp  util.cpp  util.h
shell/: anyshrc  bashrc  gitconfig  gitconfig.default  repos.json  repos.txt  tmux.conf  vimrc  zshenv  zshrc
ssl/: myCA.pem
tiling-wm/: fehbg  repos.txt
(+63 files in other folders)
